<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_receipt_black_18dp"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_promosi"
        android:icon="@drawable/ic_store_black_18dp"
        android:title="@string/promosi" />
    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_mail_black_18dp"
        android:title="@string/message" />
    <item
        android:id="@+id/navigation_profil"
        android:icon="@drawable/ic_account_circle_black_18dp"
        android:title="@string/profil" />
</menu>
