<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifikasiEmailActivity">

    <ImageView
        android:id="@+id/img_verifakun"
        android:layout_width="match_parent"
        android:layout_height="209dp"
        android:contentDescription="@string/gambar_verif_akun"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ol_verifakun_01" />

    <TextView
        android:id="@+id/tv_sendcode_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/verifikasi_email_anda"
        android:textColor="@color/hijau"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_verifakun" />

    <EditText
        android:id="@+id/et_kodeverif"
        android:layout_width="262dp"
        android:layout_height="71dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/kode_verifikasi"
        android:inputType="number"
        android:maxLength="4"
        android:textAlignment="center"
        android:textColorHighlight="@color/colorPrimary"
        android:textColorHint="@color/hijau"
        android:textColorLink="@color/kuning"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_verifakun_youremail"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tv_verifakun_resend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/resend_code"
        android:textColor="@color/hijautua"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_kodeverif" />

    <TextView
        android:id="@+id/tv_verifakun_pleaseenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_enter_the_4_digit"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sendcode_title" />

    <TextView
        android:id="@+id/tv_verifakun_sentto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sent_to_your_email"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_verifakun_pleaseenter" />

    <TextView
        android:id="@+id/tv_verifakun_youremail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/example_gmail_com"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_verifakun_sentto" />

    <Button
        android:id="@+id/btn_verifakun_kirim"
        android:layout_width="172dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/roundedfillkuning"
        android:text="@string/kirim"
        android:textColor="@color/ic_laundry_regis_background"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_verifakun_resend" />

    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>